[package]
name = "spark"
version = "0.0.0"
authors = ["Brendon Hogger <brendonh@gmail.com>"]
edition = "2021"

[dependencies]
bevy = { version = "0.10.1", features = ["dynamic_linking"] }
bevy_rapier2d = { version = "0.21.0", features = [ "enhanced-determinism" ] }

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3
